; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ffs/src/extr_misc.c_FFSLog2.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ffs/src/extr_misc.c_FFSLog2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FFSLog2(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = call i32 (...) @PAGED_CODE()
  %5 = load i32, i32* %2, align 4
  %6 = icmp sgt i32 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @ASSERT(i32 %7)
  br label %9

9:                                                ; preds = %12, %1
  %10 = load i32, i32* %2, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %9
  %13 = load i32, i32* %3, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %2, align 4
  %16 = ashr i32 %15, 1
  store i32 %16, i32* %2, align 4
  br label %9

17:                                               ; preds = %9
  %18 = load i32, i32* %3, align 4
  %19 = sub nsw i32 %18, 1
  ret i32 %19
}

declare dso_local i32 @PAGED_CODE(...) #1

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
